# SDL2GAME

./: CMakeLists.txt
src/: Avatar.cpp  Avatar.h  Background.h  Game.cpp  Game.h  Hazard.cpp  Hazard.h  PowerUp.cpp  PowerUp.h  main.cpp
